--- a/openrouter-project/server/package.json
+++ b/openrouter-project/server/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "openrouter-project",
+  "name": "chat-gpt-api",
   "version": "1.0.0",
-  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^5.1.0",
-    "openai": "^5.3.0"
+    "dotenv": "^16.0.3",
+    "openai": "^4.2.1"
   }
 }
